--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -259,8 +259,8 @@
                         <div class="filter_feel">
                             <h6 class="title">온도</h6>
                             <div class="answer">
-                                <input type="checkbox" id="feel_cold" name="feel" value="False"><label for="feel_cold">추위를 많이 탐</label>
-                                <input type="checkbox" id="feel_hot" name="feel" value="False"><label for="feel_hot">더위를 많이 탐</label>
+                                <input type="checkbox" id="feel_cold" name="feel_cold" value="False"><label for="feel_cold">추위를 많이 탐</label>
+                                <input type="checkbox" id="feel_hot" name="feel_hot" value="False"><label for="feel_hot">더위를 많이 탐</label>
                             </div>
                         </div>
                         <div class="filter_bug">
@@ -275,7 +275,7 @@
                             <div class="answer">
                                 <input type="radio" id="keyboard_loud" name="keyboard" value="0"><label for="keyboard_loud">타이핑&게임 자주함</label>
                                 <input type="radio" id="keyboard_no" name="keyboard" value="1"><label for="keyboard_no">거의 안함</label>
-                                <input type="checkbox" id="keyboard_noise" name="keyboard_checkbox"><label for="keyboard_noise">저소음 키보드 사용중</label>
+                                <input type="checkbox" id="keyboard_noise" name="keyboard_checkbox" value="True"><label for="keyboard_noise">저소음 키보드 사용중</label>
                             </div>
                         </div>
                         <div class="filter_game">
