--- a/survey/templates/survey.html
+++ b/survey/templates/survey.html
@@ -125,7 +125,7 @@
                     <input type="checkbox" id="snoring" name="sleeping-habits-snoring" value="True"><label for="snoring">코골이</label>
                     <input type="checkbox" id="grinding-teeth" name="sleeping-habits-teeth" value="True"><label for="grinding-teeth">이갈이</label>
                     <label for="other">기타</label><input type="text" id="other" name="sleeping-habits-other">
-                    <input type="checkbox" id="nothing" name="sleeping-habits-nothing"><label for="nothing">없음</label>
+                    <input type="checkbox" id="nothing" name="sleeping-habits-nothing" value="True"><label for="nothing">없음</label>
                 </div>
             </div>
             <div class="question invite-friends">
@@ -196,8 +196,8 @@
             <div class="question feel">
                 <h2 class="title">추위나 더위를 많이 타나요?(에어컨, 보일러 관련)</h1>
                 <div class="answer">
-                    <input type="checkbox" id="feel-cold" name="feel" value="False"><label for="feel-cold">추위를 많이 탐</label>
-                    <input type="checkbox" id="feel-hot" name="feel" value="False"><label for="feel-hot">더위를 많이 탐</label>
+                    <input type="checkbox" id="feel-cold" name="feel_cold" value="False"><label for="feel-cold">추위를 많이 탐</label>
+                    <input type="checkbox" id="feel-hot" name="feel_hot" value="False"><label for="feel-hot">더위를 많이 탐</label>
                 </div>
             </div>
             <div class="question bug">
@@ -212,7 +212,7 @@
                 <div class="answer">
                     <input type="radio" id="keyboard-loud" name="keyboard" value="0"><label for="keyboard-loud">타이핑&게임 자주함</label>
                     <input type="radio" id="keyboard-no" name="keyboard" value="1"><label for="keyboard-no">거의 안함</label>
-                    <input type="checkbox" id="keyboard-noise" name="keyboard-checkbox"><label for="keyboard-noise">저소음 키보드 사용중</label>
+                    <input type="checkbox" id="keyboard-noise" name="keyboard-checkbox" value="True"><label for="keyboard-noise">저소음 키보드 사용중</label>
                 </div>
             </div>
             <div class="question game">
