--- a/account/templates/login.html
+++ b/account/templates/login.html
@@ -1,22 +1,17 @@
 {% extends 'base.html' %}
-
-{% load static %}
+<head> 
+    {% load static %}
+    {% block head %}
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
+    {% endblock %}
+</head>
 
 {% block content %}
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>Document</title>
-</head>
 
 <body>
     <div class="login">
         <h3 class="title-login">LOGIN</h3>
+        <br><br><br>
         <div class="login-box">
             <form action="" method="post">
                 {% csrf_token %}
@@ -26,21 +21,12 @@
                 <br><br><br>
                 <a class="find" href="">아이디 / 비밀번호 찾기</a>
                 <!-- maxlength='5' 비밀 번호 최대길이 추후에 추가 -->
-                <button  type="submit">Login</button>
+                <br><br><br>
+                <button id="login_btn" type="submit">Login</button>
                 <!--<a href="{% url 'register' %}">회원가입</a> -->
-            </form>
+                <button id="kakao-login" type="submit" onclick="location.href='{% url 'kakaoLoginLogic' %}'" >카카오회원가입</button>
+            </form> 
         </div>
     </div>
-
-
-    <div > 
-        <form action="/account/kakaoLoginLogic" method="GET">
-        <input class="kakao-login" type="submit" value="카카오회원가입" />
-        </form>
-    </div>
-
-
 </body>
 {% endblock %}
-
-</html></html>
