--- a/account/templates/mypageProfile.html
+++ b/account/templates/mypageProfile.html
@@ -10,12 +10,14 @@
 
 <div class="mypage_container bg">
     <div class="mypage_nav">
-        <h3>마이페이지</h3> <br>
+        <h3 class="mypage_title">마이페이지</h3>
         <!-- border-left 색상 바꾸기 (클릭 모션) -->
-        <a href="">회원정보 수정</a> <br>
-        <a href="">체크리스트 수정</a> <br>
-        <a href="">스크랩 목록</a> <br>
-        <a href="">내가 작성한 글</a> <br>
+        <ul >
+            <li><a href="">회원정보 수정</a></li>
+            <li><a href="">체크리스트 수정</a></li>
+            <li><a href="">스크랩 목록</a></li>
+            <li><a href="">내가 작성한 글</a></li>
+        </ul>
     </div>
     <div class="mypage_content">
         <form action="" method="post">
