--- a/checkmate/templates/infoWrite.html
+++ b/checkmate/templates/infoWrite.html
@@ -1,27 +1,33 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h3>정보 공유 게시판</h3>
-<form action="" method="post">
-{% csrf_token %}
+<div class="info_container">
+    <h3>정보 공유 게시판</h3>
+    <form action="" method="post">
+        <div class="info_container-box1">
+            {% csrf_token %}
+            <select class="hashtag" name="hashtag">
+                <option value="">말머리</option>
+                <option value=1>원룸정보</option>
+                <option value=2>기숙사정보</option>
+                <option value=3>질문있어요</option>
+                <option value=4>해결했어요</option>
+            </select>
+            <!-- 말머리 -->
+            <input type="text" placeholder="이곳에 제목을 작성하세요.">
+            <!-- 정보 게시판 제목 -->
+        </div>
+        <div class="info_container-box2">
+            <img src="" alt="profile_image">
+            <!-- 프로필이미지 -->
+            <p>닉네임</p>
+            <input type="file" name="image">
+            <!-- 사진 업로드 -->
+        </div>
+        <textarea class="body" name="" id="" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."></textarea>
+        <!-- 정보 게시판 작성 내용 -->
+        <button type="submit">저장</button>
 
-<select name="hashtag">
-    <option value="">말머리</option>
-    <option value=1>원룸정보</option>
-    <option value=2>기숙사정보</option>
-    <option value=3>질문있어요</option>
-    <option value=4>해결했어요</option>
-</select>
-<!-- 말머리 -->
-<input type="text" placeholder="이곳에 제목을 작성하세요.">
-<!-- 정보 게시판 제목 -->
-<img src="" alt="profile_image">
-<!-- 프로필이미지 -->
-<p>닉네임</p>
-<input type="file" name="image">
-<!-- 사진 업로드 -->
-<input type="text" name="" id="" placeholder="이곳에 본문을 작성하세요.">
-<!-- 정보 게시판 작성 내용 -->
-<button type="submit">저장</button>
-</form>
+    </form>
+</div>
 {% endblock %}
