--- a/checkmate/templates/mypageScrap.html
+++ b/checkmate/templates/mypageScrap.html
@@ -3,39 +3,47 @@
 
 {% block content %}
 <div class="mypage_container bg">
-<div class="mypage_nav">
-    <h3>마이페이지</h3>
-    <!-- border-left 색상 바꾸기 (클릭 모션) -->
-    <a href="">회원정보 수정</a>
-    <a href="">체크리스트 수정</a>
-    <a href="">스크랩 목록</a>
-    <a href="">내가 작성한 글</a>
-</div>
-<div class="mypage_content">
-    <h3>스크랩</h3>
-    <button>수정</button>
-    <div>
-        <!-- span for문돌리기 -->
-        <div>
-            <input type="checkbox" name="" id="">
-            <p>기숙사 | 남 | 20세</p>
-            <p>안녕하세요 10동 룸메이트 구합니다. 저층 선호합니다.</p>
-        </div>
-    </div>
-    <div>
-        <ul class="pagination">
-            <li class="page-item"><a class="page-link" href="#">◀</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">4</a></li>
-            <li class="page-item"><a class="page-link" href="#">5</a></li>
-            <li class="page-item"><a class="page-link" href="#">▶</a></li>
+    <div class="mypage_nav">
+        <h3 class="mypage_title">마이페이지</h3>
+        <!-- border-left 색상 바꾸기 (클릭 모션) -->
+        <ul >
+            <li><a href="">회원정보 수정</a></li>
+            <li><a href="">체크리스트 수정</a></li>
+            <li><a href="">스크랩 목록</a></li>
+            <li><a href="">내가 작성한 글</a></li>
         </ul>
     </div>
-    <a href="">삭제하기</a>
-</div>
+    <div class="mypage_scap-content">
+        <h3 class="mypage_subtitle">스크랩</h3>
+        <button  class="mypage_btn">수정</button>
 
+
+            <div class="mypage_sub-bar">
+                <input class="mypage_list-checkbox"  type="checkbox" name="" id="checkbox">
+                <p>작성자</p>
+                <p>제목</p>
+            </div>
+
+
+        <!-- span for문돌리기 -->
+        <div class="mypage_list">
+            <input class="mypage_list-checkbox" type="checkbox" name="" id="checkbox">
+            <p class="mypage_content-title">기숙사 | 남 | 20세</p>
+            <p class="mypage_content-body">안녕하세요 10동 룸메이트 구합니다. 저층 선호합니다.</p>
+        </div>
+        <a class="mypage_delete" href="">삭제하기</a>
+        <div>
+            <ul class="pagination">
+                <li class="page-item"><a class="page-link" href="#">◀</a></li>
+                <li class="page-item"><a class="page-link" href="#">1</a></li>
+                <li class="page-item"><a class="page-link" href="#">2</a></li>
+                <li class="page-item"><a class="page-link" href="#">3</a></li>
+                <li class="page-item"><a class="page-link" href="#">4</a></li>
+                <li class="page-item"><a class="page-link" href="#">5</a></li>
+                <li class="page-item"><a class="page-link" href="#">▶</a></li>
+            </ul>
+        </div>
+    </div>    
 </div>
 
 <img class="open" id="jsBtn" src="{% static 'img/chat_icon.png' %}" alt="">
