--- a/roommate/templates/searchRoommate.html
+++ b/roommate/templates/searchRoommate.html
@@ -13,7 +13,7 @@
 
 <div>
     <div>
-        <h3>룸메 찾기</h3>
+        <h3 class="title" >룸메 찾기</h3>
     </div>
     <div>
         <form action="" method="GET">
