--- a/checkmate/templates/base.html
+++ b/checkmate/templates/base.html
@@ -45,7 +45,7 @@
     <nav>
         <div class="right-menu">
             <a href="{% url 'searchRoommate' %}">룸메 찾기</a>
-            <a href="{% url 'community' %}">정보 공유</a>
+            <a href="{% url 'offcampusCommunity' %}">정보 공유</a>
             {% if user.is_authenticated %}
             <a href="{% url 'logout' %}">로그아웃</a>
             <a href="{% url 'mypageProfile' %}">내정보</a>
