--- a/checkmate/templates/domitoryCommunity.html
+++ b/checkmate/templates/domitoryCommunity.html
@@ -2,8 +2,8 @@
 {% load static %}
 
 {% block content %}
-<h3>정보 공유 게시판</h3>
-<div>  
+<h3>기숙사 정보 공유 게시판</h3>
+<div>
     <a href="">인기 게시글</a>
     <div>
         <h5>검색</h5>
@@ -12,17 +12,26 @@
             <input type="text" placeholder="#역세권_오피스텔_어때요?">
             <button type="submit">검색아이콘</button>
         </form>
-        <button>+</button>
+        <button onclick="location.href='{% url 'dom_infoWrite' %}'">+</button>
     </div>
 </div>
+
+{% for post in posts %}     
 <div>
-    <div>
-        <p>원룸정보</p>
-        <p>자취 | 보금자리빌</p>
-        <p>원룸 리뷰입니다.</p>
-    </div>
-        
+
+    {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
+    <p class="preface">원룸정보</p>
+    <p>{{ post.preface_2 }}</p>
+    <p>{{ post.title }}</p>
+    {% else %}
+    <p class="preface">{{ post.preface }}</p>
+    <p>{{ post.preface_2 }}</p>
+    <p>{{ post.title }}</p>
+    {% endif %}
+
 </div>
+{% endfor %}
+
 <div>
     <ul class="pagination">
         <li class="page-item"><a class="page-link" href="#">◀</a></li>
@@ -45,11 +54,11 @@
     const close = document.querySelector(".modal__closeBtn");
     const modal = document.querySelector(".modal");
 
-    function init(){
-        open.addEventListener("click",function(){
+    function init() {
+        open.addEventListener("click", function () {
             modal.classList.remove("hidden");
         });
-        close.addEventListener("click",function(){
+        close.addEventListener("click", function () {
             modal.classList.add("hidden");
         });
     }
