--- a/checkmate/templates/main.html
+++ b/checkmate/templates/main.html
@@ -25,7 +25,7 @@
                 <div class="menu-2">
                     <h1 class="title">정보공유하기</h1>
                     <p class="detail">기숙사, 원룸 정보를 공유 해주세요</p>
-                    <button onclick="location.href='community'">
+                    <button onclick="location.href='offcampusCommunity'">
                         <p>바로가기 ></p>
                         <img src="" alt=""> <!-- 화살표 이미지 추가 -->
                     </button>
