--- a/checkmate/templates/offcampusCommunity.html
+++ b/checkmate/templates/offcampusCommunity.html
@@ -18,7 +18,7 @@
 </div>
 
 {% for post in posts %}     
-<div class="com_content">
+<div class="com_content" onclick="location.href='{% url 'offcampusView' post.id %}'">
 
     {% if post.preface_2 == '정문' or post.preface == '후문' or post.preface == '남문' or post.preface == '호탄' or post.preface == '기타' %}
     <p id="com_content-info" class="preface">원룸정보</p>
