정보게시판 수정 삭제 구현

--- a/checkmate/templates/offcampusView.html
+++ b/checkmate/templates/offcampusView.html
@@ -19,7 +19,7 @@
 <div>
     <p>{{ post.content }}</p>
     <!-- 내용 -->
-    <a href=""><span>수정</span></a>
+    <a href="{% url 'offcampusUpdate' post.id %}"><span>수정</span></a>
     <a href="{% url 'offcampusDelete' post.id %}"><span>삭제</span></a>
 </div>
 <div>
