--- a/checkmate/templates/dom_infoWrite.html
+++ b/checkmate/templates/dom_infoWrite.html
@@ -48,7 +48,7 @@ function categoryChange(preface_1) {
 <p>{{ user.user_nickname }}</p>
 <input type="file" name="image">
 <!-- 사진 업로드 -->
-<input type="text" name="content" id="" placeholder="이곳에 본문을 작성하세요.">
+<textarea class="body" name="content" cols="130" rows="20" style="resize: none;" placeholder="   이곳에 본문을 작성하세요."></textarea>
 <!-- 정보 게시판 작성 내용 -->
 <button type="submit">저장</button>
 </form>
